--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De patria a patria - TripleTen</title>
-      <link rel="stylesheet" href="vendor/normalize.css">
-    <link rel="stylesheet" href="./styles/main.css" />
-<link rel="stylesheet" href="vendor/fonts.css">
+
+    <link rel="stylesheet" href="./styles/index.css" />
+
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
