Actualizacion de ruta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>De patria a patria - TripleTen</title>
 
-    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
 
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
