--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="carlos briseño">
+    <meta name="description" content="proyecto de patria patria">
+    <meta name="keywords" content="html css responsivo">
     <title>De patria a patria - TripleTen</title>
 
     <link rel="stylesheet" href="./pages/index.css" />
