Correccion de main

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img class="header__image" src="./images/__image.jpg" alt="" />
       </header>
 
-      <main class="main">
+      <main class="content">
         <section class="intro">
           <h2 class="intro__title">
             Conoce un poco mejor los lugares de los que proceden tus colegas en
