--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img
             src="./images/logo.svg"
             alt="Logo TripleTen"
-            class="logo__image"
+            class="header__image"
           />
         </div>
         <h1 class="header__title">De patria a patria</h1>
