--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       </main>
 
       <footer class="footer">
-        <p class="footer__copyright">© 2025 TripleTen Art Gallery</p>
+        <p class="footer_copyright">&copy; 2025 TripleTen Art Gallery</p>
+</footer>
       </footer>
     </div>
   </body>
