--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </section>
       </main>
 
-      <footer class="footer">
-        <p class="footer_copyright">&copy; 2025 TripleTen Art Gallery</p>
+     <footer class="footer">
+    <p class="footer__copyright">&copy; 2025 TripleTen Art Gallery</p>
 </footer>
       </footer>
     </div>
